--- a/application/frontend/package.json
+++ b/application/frontend/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
-    "@zebrajaeger/ws-value": "1.0.7",
+    "@zebrajaeger/ws-value": "^1.1.2",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
