--- a/application/frontend/package.json
+++ b/application/frontend/package.json
@@ -26,6 +26,7 @@
     "@zebrajaeger/ws-value": "^1.1.2",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.4",
+    "store2": "^2.11.2",
     "tslib": "^1.10.0",
     "utf-8-validate": "^5.0.2",
     "zone.js": "~0.10.2"
